chore: head database in v4
