# api/v4Internal/openapi.yaml
@@ -3,6 +3,58 @@ info:
     title: Server API
     version: "1.0"
 paths:
+    /head-database/{category}:
+        get:
+            operationId: getHeadDatabaseCategory
+            parameters:
+                - name: category
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  required: true
+                  schema:
+                    type: integer
+                - name: pageSize
+                  in: query
+                  required: true
+                  schema:
+                    type: integer
+            responses:
+                "200":
+                    description: Successful response
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+    /head-database/search:
+        get:
+            operationId: searchHeadDatabase
+            parameters:
+                - name: page
+                  in: query
+                  required: true
+                  schema:
+                    type: integer
+                - name: pageSize
+                  in: query
+                  required: true
+                  schema:
+                    type: integer
+                - name: query
+                  in: query
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: Successful response
+                    content:
+                        application/json:
+                            schema:
+                                type: object
     /players:
         post:
             operationId: createPlayerData
